Fixed bug #33987 (php script as ErrorDocument causes crash in Apache 2).